# TextThroughTime

./: CMakeLists.txt
cmake/: FindLua.cmake  FindMINGW32.cmake
fonts/: main.fnt  title.fnt
scripts/: docs.txt  init.lua  init_old.lua  item_init.lua  item_scripts.lua  map_init.lua  npc_init.lua  room_init.lua  room_scripts.lua  utils.lua
shaders/: console_frag.glsl  text_frag.glsl  text_vert.glsl
src/: command_parser.cpp  command_parser.h  console.cpp  console.h  console_renderer.cpp  console_renderer.h  console_window.cpp  error_handling.cpp  error_handling.h  log.cpp  log.h  main.cpp  text_renderer.cpp  text_renderer.h  tokenizer.cpp  tokenizer.h  window_manager.cpp  window_manager.h
src/core/: file_handler.cpp  file_handler.h  font.cpp  font.h  input.cpp  input.h  math_utils.cpp  math_utils.h  shader_program.cpp  shader_program.h  texture.cpp  window.cpp  window.h
src/game/: command_parser.cpp  command_parser.h  dice_roller.cpp  dice_roller.h  game_manager.cpp  game_manager.h  game_object.cpp  game_object.h  game_variable_map.h  inventory.cpp  inventory.h  item.cpp  item.h  map.cpp  map.h  npc.cpp  npc.h  npc_container.cpp  npc_container.h  room.cpp  room.h
src/game/combat/: combat_manager.cpp  combat_manager.h  equipment.cpp  equipment.h  stat_block.cpp  stat_block.h  weapon.cpp  weapon.h
